--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "devDependencies": {
     "express": "^4.18.2",
+    "fast-levenshtein": "^3.0.0",
     "graphpack": "^1.0.9",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "request": "^2.88.2"
   }
 }
